# protein

./: Cargo.toml  README.md
examples/: ramachandran.R  ramachandran.csv  ramachandran.rs
protein-analysis/: Cargo.toml
protein-analysis/src/: model.rs
protein-core/: Cargo.toml  README.md
protein-core/src/: data.rs  lib.rs  metadata.rs  structure.rs  types.rs
protein-core/src/data/: connect.rs
protein-core/src/data/connect/: protein.rs
protein-core/src/io/: pdb.rs
protein-core/src/io/pdb/: crystallography.rs  primary_structure.rs  title_section.rs
protein-core/src/metadata/: title_section.rs
protein-core/src/structure/: atom.rs  chain.rs  element.rs  model.rs  residue.rs  secondary_structure.rs
protein-core/src/types/: aa.rs  anisou.rs  atom.rs  element.rs  model.rs  residue.rs  secondary_structure.rs  serial.rs
protein-data/: Cargo.toml
protein-data/src/: lib.rs  rama.rs
protein-get/: Cargo.toml  README.md
protein-get/src/: lib.rs  main.rs
protein-io/: Cargo.toml
protein-io/src/: lib.rs
src/: analysis.rs  io.rs  lib.rs
src/io/: pdb.rs
src/io/pdb/: title_section.rs
