[package]
name = "protein"
version = "0.0.2"
authors = ["Tianyi <ShiTianyi2001@outlook.com>"]
edition = "2018"
keywords = ["bioinformatics", "protein", "parser","nom", "pdb", "biology", "science"]
license = "MIT"
repository = "https://github.com/TianyiShi2001/protein"
description = "Working with protein structures"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protein-core = '0.1.0'
serde = { version = "1.0", features = ["derive"] }
chrono = {version = "0.4", features = ["serde"]}