[package]
name = "protein"
version = "0.0.5"
authors = ["Tianyi <ShiTianyi2001@outlook.com>"]
edition = "2018"
keywords = ["bioinformatics", "protein", "biology", "science"]
license = "MIT"
repository = "https://github.com/TianyiShi2001/protein"
description = "Working with protein structures"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "protein-core",
    "protein-io",
    "protein-analysis",
    "protein-get",
    "protein-data"
]

[dependencies]
protein-core = "0.1"
protein-io = { path = "protein-io", version = "0.0" }
protein-analysis = { path = "protein-analysis", version = "0.0" }
protein-get = { path = "protein-get", version = "0.0" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
csv = "1"
