[package]
name = "protein-analysis"
version = "0.0.1"
authors = ["Tianyi <ShiTianyi2001@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protein-core = "0.1"
dihedral =  {version = "0.0", features = ["f32"]}