[package]
name = "protein-analysis"
version = "0.0.1"
authors = ["Tianyi <ShiTianyi2001@outlook.com>"]
edition = "2018"
keywords = ["bioinformatics", "protein", "biology", "science"]
license = "MIT"
repository = "https://github.com/TianyiShi2001/protein"
description = "Protein analysis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protein-core = "0.1"
dihedral =  {version = "0.0", features = ["f32"]}