[package]
name = "protein-io"
version = "0.0.1"
authors = ["Tianyi <ShiTianyi2001@outlook.com>"]
edition = "2018"
keywords = ["bioinformatics", "protein", "biology", "science"]
license = "MIT"
repository = "https://github.com/TianyiShi2001/protein"
description = "Parsers for common protein structure file formats"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom-pdb = "0.0.9"
protein-core = "0.1"